<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Collage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_home_start">Start</string>
    <string name="fragment_home_rate_us">Rate Us</string>
    <string name="fragment_home_more_apps">More Apps</string>
    <string name="fragment_home_grid_style">Grid-Style</string>
    <string name="fragment_home_free_style">Free-Style</string>
    <string name="fragment_home_text_style">Text-O-Pic</string>
    <string name="fragment_home_shape">Shape</string>
    <string name="fragment_home_headder">\u0020Photo Collage\u0020</string>
    
</resources>