<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_home_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.61" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" >

        <LinearLayout
            android:id="@+id/fragment_home_layout_grid"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/fragment_home_imageView_grid"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/grid" />

            <com.adroitstudio.photocollage.view.custom_view.CustomStyleTextView
                android:id="@+id/fragment_home_textView_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_grid_style"
                android:textColor="@color/text_color_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_home_layout_free"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/fragment_home_imageView_free"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/free" />

            <com.adroitstudio.photocollage.view.custom_view.CustomStyleTextView
                android:id="@+id/fragment_home_textView_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_free_style"
                android:textColor="@color/text_color_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_home_layout_shape"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/fragment_home_imageView_shape"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/shape" />

            <com.adroitstudio.photocollage.view.custom_view.CustomStyleTextView
                android:id="@+id/fragment_home_textView_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_shape"
                android:textColor="@color/text_color_white" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02" />

    <com.adroitstudio.photocollage.view.custom_view.HomeViewGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15" >

        <com.adroitstudio.photocollage.view.custom_view.CustomLinkTextView
            android:id="@+id/fragment_home_textView_rate_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_empty"
            android:gravity="center"
            android:text="@string/fragment_home_rate_us"
            android:textColor="@color/text_color_white" />

        <com.adroitstudio.photocollage.view.custom_view.CustomStartTextView
            android:id="@+id/fragment_home_textView_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_empty"
            android:gravity="center"
            android:text="@string/fragment_home_start"
            android:textColor="@color/text_color_white" />

        <com.adroitstudio.photocollage.view.custom_view.CustomLinkTextView
            android:id="@+id/fragment_home_textView_more_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_empty"
            android:gravity="center"
            android:text="@string/fragment_home_more_apps"
            android:textColor="@color/text_color_white" />
    </com.adroitstudio.photocollage.view.custom_view.HomeViewGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02" />

</LinearLayout>